# arxiv-daily-digest

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: database.py  main.py  processor.py
backend/src/agent/: graph.py
backend/src/crawler/: scraper.py
backend/src/interfaces/: interfaces.py
backend/src/utils/: log_config.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: main.py
src/: config.py  database.py  main.py  model.py
src/config/: load_env.py
src/crawler/: scraper.py
src/interfaces/: interfaces.py
src/utils/: log_config.py
