[project]
name = "arxiv-daily-digest"
version = "0.0.1"
description = "An AI Agent powered by LangGraph to fetch, summarize, and discuss new papers from arXiv daily."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.4.0",
    "beanie>=2.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.40.0",
]
