[project]
name = "arxiv-daily-digest-backend"
version = "0.0.1"
description = "Backend API & Crawler Worker"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.4.0",
    "beanie>=2.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain-google-genai>=4.2.0",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.40.0",
]
